# hermes-collab-engine

./: .gitignore  CONTRIBUTING.md  README.en.md  README.ja.md  README.md  pyproject.toml  sandbox.sh  start.py  start.sh
docs/: agent-communication-protocol.md  self-upgrade-policy.md
docs/launch/: good-first-issues.md  v5.0-posts.md
sandbox/: README.md  index.html  server.py
scripts/: start_sandbox.sh
src/hermes_collab_engine/: agents.py  cli.py  engine.py  models.py  planner.py  registry.py  server.py  skills.py  store.py  tools.py  verification.py
tests/: test_agent_backends.py  test_checkpoint_pause_resume.py  test_cli_lesson.py  test_cli_status.py  test_context_persistence.py  test_dashboard_api_behavior.py  test_dashboard_capabilities.py  test_dashboard_run_detail_payload.py  test_engine_registry_bridge.py  test_engine_shared_context.py  test_env_model_fallback.py  test_implementation_only_brief.py  test_interrupt_cleanup.py  test_intervention_cli.py  test_intervention_cli_v3.py  test_lessons_scope.py  test_parent_log_cmd.py  test_planner_assess.py  test_planner_brief_output.py  test_planner_checkpoints.py  test_planner_fallback.py  test_proactive_split.py  test_redo_node.py  test_risk_detection.py  test_sandbox_prod_feature_sync.py  test_skill_tool_prealloc.py  test_skills.py  test_startup_mode.py  test_store_v3.py  test_stream_scheduler.py  test_tools.py  test_unified_registry.py  test_upstream_grandparent.py  test_verification.py  test_worker_dual_track_parse.py  test_worker_permissions.py  test_worker_skills.py
web/: index.html
(+1 files in other folders)
